--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -30,8 +30,8 @@ body, div, span, p {
   box-shadow: rgba(0, 0, 0, 0.4) 0 0 1em 0.3em inset, rgba(255, 255, 255, 0.3) 0 1px, rgba(0, 0, 0, 0.3) 0 -1px;
 }
 .text-shadow {
-  color: #F7FAEB;
-  text-shadow: #819325 -1px 1px 0, #485214 -2px 2px 0, #2B310C -3px 3px 0;
+  color: #2F350D;
+  text-shadow: #819325 -2px 2px 0, #819325 0 2px 0, #819325 2px 2px 0, #819325 -2px 0 0, #819325 0 0 0, #819325 2px 0 0, #819325 -2px -2px 0, #819325 0 -2px 0, #819325 2px -2px 0;
 }
 
 div#content {
